--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -2,4 +2,4 @@ authors:
   almightyPush:
     name: Nabil Seid
     description: Rocking it
-    avatar: https://github.com/squidfunk.png
+    avatar: https://avatars.githubusercontent.com/u/9773677?v=4
