--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,7 @@ theme:
         name: Switch to dark mode
   icon:
     logo: material/numeric-10
+    favicon: images/favicon.png
 
 nav:
   - Home: index.md
