--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,9 @@
 site_name: 10 Birr
+site_url: https://nabilseid.github.io
+site_description: I blend in my open source projects and notes.
+copyright: Made with ❤️  in Medeja Bet
+
+use_directory_urls: false
 
 # Theme
 theme:
