--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
           python-version: '3.x'
       - name: Install required packages
         run: pip install mkdocs-material 
+        run: pip install mkdocs-rss-plugin
       - name: Setup caching
         uses: actions/cache@v3
         with:
