--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,9 @@ nav:
     - Python: cookbooks/python.md
   - Blog:
     - blog/index.md
+  - The Universe: 
+    - the-universe/index.md
+    - Our kids and Them Kids: the-universe/our-kids-and-them-kids.md
   - About: about.md
 
 markdown_extensions:
