Add the universe

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,6 +72,8 @@ markdown_extensions:
   - pymdownx.snippets
   - pymdownx.superfences
 
+extra_css:
+  - stylesheets/extra.css
 
 plugins:
   - search
