--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,6 +72,12 @@ markdown_extensions:
   - pymdownx.snippets
   - pymdownx.superfences
 
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+
 extra_css:
   - stylesheets/extra.css
 
