--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,5 +27,7 @@ jobs:
             mkdocs-material-
       - run: |
           pip install mkdocs-material 
+          pip install mkdocs-material-extensions
+          pip install pymdown-extensions
           pip install mkdocs-rss-plugin
       - run: mkdocs gh-deploy --force
